added svg background for each page

--- a/skills.html
+++ b/skills.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <title>Skills</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 </head>
-<body>
+<body id="skills">
     <h1>Skills</h1>
 </body>
 </html>
