--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <title>Contact Info</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 </head>
-<body>
+<body id="contact-info">
     <h1>Contact Info</h1>
 </body>
 </html>
