added initial navbar to all pages

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
                 <h1>Hi, I'm Christian Lopez - </h1>
                 <h2> Web Developer</h2>
             </header>
-            <nav class="nav">
-                <a href="index.html" class="nav-links current-page">Home</a>
-                <a href="projects.html" class="nav-links">Projects</a>
-                <a href="skills.html" class="nav-links">Skillset</a>
-                <a href="contact.html" class="nav-links">Contact Me</a>
+            <nav class="home-nav">
+                <a href="index.html" class="home-links current-page">Home</a>
+                <a href="projects.html" class="home-links">Projects</a>
+                <a href="skills.html" class="home-links">Skillset</a>
+                <a href="contact.html" class="home-links">Contact Me</a>
             </nav>
         </div>
     </main>
