--- a/skills.html
+++ b/skills.html
@@ -6,6 +6,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 </head>
 <body id="skills">
+    <nav class="navbar">
+        <a href="index.html" class="nav-links">Home</a>
+        <a href="projects.html" class="nav-links">Projects</a>
+        <a href="skills.html" class="nav-links current-page">Skillset</a>
+        <a href="contact.html" class="nav-links">Contact Me</a>
+    </nav>
     <h1>Skills</h1>
 </body>
 </html>
