--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Christian Lopez's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/styles.css"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 </head>
 <body>
