--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Projects</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 </head>
 <body id="projects">
@@ -12,6 +12,35 @@
         <a href="skills.html" class="nav-links">Skillset</a>
         <a href="contact.html" class="nav-links">Contact Me</a>
     </nav>
-    <h1>Projects</h1>
+    <h1 class="title">Projects</h1>
+    <main class="project">
+        <section>
+            <a href="http://soarify.herokuapp.com/" class="project-link"><img src="./assets/soarify.JPG" alt="screenshot of soarify website homepage" class="project-images"></a>
+            <p class="project-title">SOARIFY</p>
+            <p>Built With
+                <p>MongoDB (Mongoose)</p>
+                <p>Express.js</p>
+                <p>React.js/Redux</p>
+                <p>Node.js</p>
+                <p>CSS3</p>
+                <p>Google Maps API</p>
+        </section>
+        <section>
+            <a href="http://filmselect.surge.sh/" class="project-link"><img src="./assets/film-select.JPG" alt="screenshot of film select website homepage" class="project-images"></a>
+            <p class="project-title">FILM SELECT</p>
+            <p>Built With
+                <p>React.js/Redux</p>
+                <p>CSS3</p>
+                <p>The Movies Database API</p>
+        </section>
+        <section>
+            <a href="http://rgbcolorguesser.surge.sh/" class="project-link"><img src="./assets/rgb-color-guess.JPG" alt="screenshot of rgb color guess website" class="project-images"></a>
+            <p class="project-title">RGB Color Guess</p>
+            <p>Built With:</p>
+            
+                <p>React.js</p>
+                <p>CSS3</p>
+        </section>
+    </main>
 </body>
 </html>
