completed skills and contact sections

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <h1 class="title">Projects</h1>
     <main class="project">
         <section>
-            <a href="http://soarify.herokuapp.com/" class="project-link"><img src="./assets/soarify.JPG" alt="screenshot of soarify website homepage" class="project-images"></a>
+            <a href="http://soarify.herokuapp.com/" class="project-link" target=”_blank”><img src="./assets/soarify.JPG" alt="screenshot of soarify website homepage" class="project-images"></a>
             <p class="project-title">SOARIFY</p>
             <p>Built With:</p>
                 <p>MongoDB (Mongoose)</p>
@@ -26,7 +26,7 @@
                 <p>Google Maps API</p>
         </section>
         <section>
-            <a href="http://filmselect.surge.sh/" class="project-link"><img src="./assets/film-select.JPG" alt="screenshot of film select website homepage" class="project-images"></a>
+            <a href="http://filmselect.surge.sh/" class="project-link" target=”_blank”><img src="./assets/film-select.JPG" alt="screenshot of film select website homepage" class="project-images"></a>
             <p class="project-title">FILM SELECT</p>
             <p>Built With:</p>
                 <p>React.js/Redux</p>
@@ -34,7 +34,7 @@
                 <p>The Movies Database API</p>
         </section>
         <section>
-            <a href="http://rgbcolorguesser.surge.sh/" class="project-link"><img src="./assets/rgb-color-guess.JPG" alt="screenshot of rgb color guess website" class="project-images"></a>
+            <a href="http://rgbcolorguesser.surge.sh/" class="project-link" target=”_blank”><img src="./assets/rgb-color-guess.JPG" alt="screenshot of rgb color guess website" class="project-images"></a>
             <p class="project-title">RGB Color Guess</p>
             <p>Built With:</p>
                 <p>React.js</p>
