removed animation from projects page and made contact links blue on hover

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
         <a href="contact.html" class="nav-links current-page">Contact Me</a>
     </nav>
     <h1 class="title">Contact Info</h1>
-    <p>Check out my LinkedIn: <a href="https://www.linkedin.com/in/lopezchris616/" target=”_blank”>LopezChris616</a></p>
-    <p>Email: <a href="mailto:christian.lopez023@mymdc.net">christian.lopez023@mymdc.net</a></p>
-    <p>Github: <a href="https://github.com/LopezChris616" target=”_blank”>LopezChris616</a></p>
+    <p>Check out my LinkedIn: <a href="https://www.linkedin.com/in/lopezchris616/" target=”_blank” class="contact-links">LopezChris616</a></p>
+    <p>Email: <a href="mailto:christian.lopez023@mymdc.net" class="contact-links">christian.lopez023@mymdc.net</a></p>
+    <p>Github: <a href="https://github.com/LopezChris616" target=”_blank” class="contact-links">LopezChris616</a></p>
 </body>
 </html>
