--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <main id="home-page">
         <div id="intro">
             <header id="intro-name">
-                <h1>Hi, I'm Christian Lopez - </h1>
-                <h2> Web Developer</h2>
+                <h1>Hi, I'm Christian Lopez - Web Developer</h1>
             </header>
             <nav class="home-nav">
-                <a href="index.html" class="home-links current-page">Home</a>
                 <a href="projects.html" class="home-links">Projects</a>
                 <a href="skills.html" class="home-links">Skillset</a>
                 <a href="contact.html" class="home-links">Contact Me</a>
