added jQuery and Bootstrap to list of skills and removed unused animation from CSS

--- a/skills.html
+++ b/skills.html
@@ -48,6 +48,14 @@
         <section>
             <i class="fab fa-5x fa-node"></i>
         </section>
+
+        <section>
+            <p>jQuery</p>
+        </section>
+
+        <section>
+            <p>Bootstrap</p>
+        </section>
     </main>
 </body>
 </html>
