--- a/index.html
+++ b/index.html
@@ -39,6 +39,83 @@
       <div id="intro">
         <h1>Let's work together.</h1>
       </div>
+      <div id="projects">
+        <h2>Projects</h2>
+
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image">
+                <a href="https://soarify.herokuapp.com/" target="_blank"><img src="/assets/soarify.JPG"></a>
+              </div>
+              <div class="card-content">
+                <span class="card-title">Soarify<i class="material-icons activator right hello">more_vert</i></span>
+                <p>Web app to keep track of locations you would like to visit</p>
+              </div>
+              <div class="card-action">
+                <a href="https://soarify.herokuapp.com/" target="_blank">Check it out!</a>
+              </div>
+              <div class="card-reveal">
+                <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                <ul>
+                  <li>MongoDB</li>
+                  <li>Express.js</li>
+                  <li>ReactJS</li>
+                  <li>Node.js</li>
+                  <li>CSS3</li>
+                  <li>Google Maps API</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image">
+                <a href="https://filmselect.surge.sh/" target="_blank"><img src="/assets/film-select.JPG"></a>
+              </div>
+              <div class="card-content">
+                <span class="card-title">Film Select<i class="material-icons activator right hello">more_vert</i></span>
+                <p>Web app to view information on films</p>
+              </div>
+              <div class="card-action">
+                <a href="https://filmselect.surge.sh/" target="_blank">Check it out!</a>
+              </div>
+              <div class="card-reveal">
+                  <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                  <ul>
+                    <li>ReactJS</li>
+                    <li>CSS3</li>
+                    <li>The Movies Database API</li>
+                  </ul>
+                </div>
+            </div>
+          </div>
+
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image">
+                <a href="https://rgbcolorguesser.surge.sh/" target="_blank"><img src="/assets/rgb-color-guess.JPG"></a>
+              </div>
+              <div class="card-content">
+                <span class="card-title">RGB Color Guesser<i class="material-icons activator right hello">more_vert</i></span>
+                <p>A guess the RGB color guessing game!</p>
+              </div>
+              <div class="card-action">
+                <a href="https://rgbcolorguesser.surge.sh/" target="_blank">Check it out!</a>
+              </div>
+              <div class="card-reveal">
+                  <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                  <ul>
+                    <li>ReactJS</li>
+                    <li>CSS3</li>
+                  </ul>
+                </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
 
   </div>
