finished the complete redesign

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
     <link rel="stylesheet" type="text/css" href="/assets/fontawesome-free-5.3.1-web/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
@@ -15,15 +16,15 @@
     <li><a href="#projects" class="waves-effect"><i class="material-icons small white-text">web</i>Projects</a></li>
     <li><a href="#skillsScroll" class="waves-effect"><i class="material-icons small white-text">stars</i>Skills</a></li>
     <li><a class="waves-effect" href="#contact"><i class="material-icons small white-text">contact_mail</i>Contact</a></li>
-    <li><a href="#" class="waves-effect"><i class="material-icons small white-text">assignment_ind</i>Resume</a></li>
+    <li><a href="https://docs.google.com/document/d/1et6irbEsMr3KeQk02iYL_tXDoA_Bo9muQl0iABQLtMY/edit?usp=sharing" target="_blank" class="waves-effect"><i class="material-icons small white-text">assignment_ind</i>Resume</a></li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons small nav">menu</i></a>
   <div id="container">
     <div>
       <div id="intro" class="section scrollspy">
         <h1>Christian Lopez</h1>
         <h1>Web Developer</h1>
-        <h1>Let's work together.</h1>
+        <h1>Let's build something awesome!</h1>
       </div>
       <div id="projects" class="section scrollspy">
         <h2>Projects</h2>
@@ -176,19 +177,22 @@
       <h2>Contact</h2>
       <div class="card">
         <div class="card-content">
-          <span class="card-title">Info</span>
           <div class="row">
-            <div class="col s3 techName">
+            <div class="col s6 m3 techName">
               <a class="btn-floating btn-large waves-effect waves-light red" href="https://www.linkedin.com/in/lopezchris616/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               <p>LinkedIn</p>
             </div>
-            <div class="col s3 techName">
+            <div class="col s6 m3 techName">
               <a class="btn-floating btn-large waves-effect waves-light red" href="mailto:christian.lopez023@mymdc.net" target="_blank"><i class="material-icons">email</i></a>
               <p>Email</p>
             </div>
-            <div class="col s3 techName">
+            <div class="col s6 m3 techName">
                 <a class="btn-floating btn-large waves-effect waves-light red" href="https://github.com/LopezChris616" target="_blank"><i class="fab fa-github"></i></a>
                 <p>GitHub</p>
+            </div>
+            <div class="col s6 m3 techName">
+                <a class="btn-floating btn-large waves-effect waves-light red" href="https://docs.google.com/document/d/1et6irbEsMr3KeQk02iYL_tXDoA_Bo9muQl0iABQLtMY/edit?usp=sharing" target="_blank"><i class="material-icons small white-text">assignment_ind</i></a>
+                <p>Resume</p>
             </div>
           </div> 
         </div>
