--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
     <link rel="stylesheet" type="text/css" href="/assets/fontawesome-free-5.3.1-web/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300" rel="stylesheet"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/tab-icon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
