--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons small nav">menu</i></a>
   <div id="container">
-    <div>
       <div id="intro" class="section scrollspy">
         <h1>Christian Lopez</h1>
         <h1>Web Developer</h1>
@@ -48,6 +47,7 @@
                   <li>MongoDB</li>
                   <li>Express.js</li>
                   <li>ReactJS</li>
+                  <li>Redux</li>
                   <li>Node.js</li>
                   <li>CSS3</li>
                   <li>Google Maps API</li>
@@ -69,13 +69,14 @@
                 <a href="https://filmselect.surge.sh/" target="_blank">Check it out!</a>
               </div>
               <div class="card-reveal">
-                  <p class="card-title">Built With:<i class="material-icons right">close</i></p>
-                  <ul>
-                    <li>ReactJS</li>
-                    <li>CSS3</li>
-                    <li>The Movies Database API</li>
-                  </ul>
-                </div>
+                <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                <ul>
+                  <li>ReactJS</li>
+                  <li>Redux</li>
+                  <li>CSS3</li>
+                  <li>The Movies Database API</li>
+                </ul>
+              </div>
             </div>
           </div>
 
@@ -92,17 +93,66 @@
                 <a href="https://rgbcolorguesser.surge.sh/" target="_blank">Check it out!</a>
               </div>
               <div class="card-reveal">
-                  <p class="card-title">Built With:<i class="material-icons right">close</i></p>
-                  <ul>
-                    <li>ReactJS</li>
-                    <li>CSS3</li>
-                  </ul>
-                </div>
+                <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                <ul>
+                  <li>ReactJS</li>
+                  <li>CSS3</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image">
+                <a href="https://mylocalweather.surge.sh/" target="_blank"><img src="/assets/images/my-local-weather.JPG"></a>
+              </div>
+              <div class="card-content">
+                <span class="card-title">My Local Weather<i class="material-icons activator right hello">more_vert</i></span>
+                <p>Web app that grabs your current location and returns the current and weekly weather.</p>
+              </div>
+              <div class="card-action">
+                <a href="https://mylocalweather.surge.sh/" target="_blank">Check it out!</a>
+              </div>
+              <div class="card-reveal">
+                <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                <ul>
+                  <li>ReactJS</li>
+                  <li>Redux</li>
+                  <li>Sass</li>
+                  <li>Dark Sky API</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l4">
+              <div class="card">
+                <div class="card-image">
+                  <a href="https://christianlopez.surge.sh/" target="_blank"><img src="/assets/images/portfolio.JPG"></a>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Portfolio<i class="material-icons activator right hello">more_vert</i></span>
+                  <p>Portfolio website to showcase my projects and skillset</p>
+                </div>
+                <div class="card-action">
+                  <a href="https://christianlopez.surge.sh/" target="_blank">Check it out!</a>
+                </div>
+                <div class="card-reveal">
+                  <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                  <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Materialize</li>
+                    <li>jQuery</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+        </div>
       </div>
-    </div>
 
     <div id="skills">
       <h2 id="skillsScroll" class="section scrollspy">Skills</h2>
@@ -121,18 +171,22 @@
                     <p>CSS</p>
                 </div>
                 <div class="col s6 m4 l2 techName">
+                    <img src="/assets/images/Sass.svg.png" class="skillLogos" alt="Sass logo" />
+                    <p>Sass</p>
+                </div>
+                <div class="col s6 m4 l2 techName">
                     <img src="/assets/images/JavaScript.png" class="skillLogos" alt="JavaScript logo" />
                     <p>JavaScript/ES6</p>
                 </div>
-                <div class="col s6 m4 l2 techName">
+                <div class="col s6 m4 l1 techName">
                     <img src="/assets/images/react-logo.svg" class="skillLogos" alt="ReactJS logo" />
                     <p>ReactJS</p>
                 </div>
-                <div class="col s6 m4 l2 techName">
+                <div class="col s6 m4 l1 techName">
                     <img src="/assets/images/redux.svg" class="skillLogos" alt="Redux logo" />
                     <p>Redux</p>
                 </div>
-                <div class="col s6 m4 l2 techName">
+                <div class="col s6 m4 l1 techName">
                     <img src="/assets/images/jQuery.png" class="skillLogos" alt="jQuery logo" />
                     <p>jQuery</p>
                 </div>
@@ -173,7 +227,6 @@
         </div>
     </div>
 
-
     <div id="contact" class="section scrollspy">
       <h2>Contact</h2>
       <div class="card">
@@ -199,14 +252,10 @@
         </div>
       </div>
     </div>
-
   </div>
 
-  <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/js/materialize.min.js"></script>
-    <script src="/js/app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="/js/materialize.min.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
