replaced soarify screenshot with updated design and added Sass and reactstrap to soarify built with

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="#projects" class="waves-effect"><i class="material-icons small white-text">web</i>Projects</a></li>
     <li><a href="#skillsScroll" class="waves-effect"><i class="material-icons small white-text">stars</i>Skills</a></li>
     <li><a class="waves-effect" href="#contact"><i class="material-icons small white-text">contact_mail</i>Contact</a></li>
-    <li><a href="https://docs.google.com/document/d/1et6irbEsMr3KeQk02iYL_tXDoA_Bo9muQl0iABQLtMY/edit?usp=sharing" target="_blank" class="waves-effect"><i class="material-icons small white-text">assignment_ind</i>Resume</a></li>
+    <li><a href="https://docs.google.com/document/d/1et6irbEsMr3KeQk02iYL_tXDoA_Bo9muQl0iABQLtMY/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="waves-effect"><i class="material-icons small white-text">assignment_ind</i>Resume</a></li>
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons small nav">menu</i></a>
   <div id="container">
@@ -32,14 +32,14 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://soarify.herokuapp.com/" target="_blank"><img src="/assets/images/soarify.JPG"></a>
+                <a href="https://soarify.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/soarify.JPG"></a>
               </div>
               <div class="card-content">
                 <span class="card-title">Soarify<i class="material-icons activator right hello">more_vert</i></span>
                 <p>Web app to keep track of locations you would like to visit</p>
               </div>
               <div class="card-action">
-                <a href="https://soarify.herokuapp.com/" target="_blank">Check it out!</a>
+                <a href="https://soarify.herokuapp.com/" target="_blank" rel="noopener noreferrer">Check it out!</a>
               </div>
               <div class="card-reveal">
                 <p class="card-title">Built With:<i class="material-icons right">close</i></p>
@@ -49,8 +49,9 @@
                   <li>ReactJS</li>
                   <li>Redux</li>
                   <li>Node.js</li>
-                  <li>CSS3</li>
+                  <li>Sass</li>
                   <li>Google Maps API</li>
+                  <li>Reactstrap</li>
                 </ul>
               </div>
             </div>
@@ -59,14 +60,14 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://filmselect.surge.sh/" target="_blank"><img src="/assets/images/film-select.JPG"></a>
+                <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/film-select.JPG"></a>
               </div>
               <div class="card-content">
                 <span class="card-title">Film Select<i class="material-icons activator right hello">more_vert</i></span>
                 <p>Web app to view information on films based on genre, now playing, and most popular.</p>
               </div>
               <div class="card-action">
-                <a href="https://filmselect.surge.sh/" target="_blank">Check it out!</a>
+                <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer">Check it out!</a>
               </div>
               <div class="card-reveal">
                 <p class="card-title">Built With:<i class="material-icons right">close</i></p>
@@ -83,14 +84,14 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://rgbcolorguesser.surge.sh/" target="_blank"><img src="/assets/images/rgb-color-guess.JPG"></a>
+                <a href="https://rgbcolorguesser.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/rgb-color-guess.JPG"></a>
               </div>
               <div class="card-content">
                 <span class="card-title">RGB Color Guesser<i class="material-icons activator right hello">more_vert</i></span>
                 <p>Guess as many correct RGB colored squares in 30 seconds!</p>
               </div>
               <div class="card-action">
-                <a href="https://rgbcolorguesser.surge.sh/" target="_blank">Check it out!</a>
+                <a href="https://rgbcolorguesser.surge.sh/" target="_blank" rel="noopener noreferrer">Check it out!</a>
               </div>
               <div class="card-reveal">
                 <p class="card-title">Built With:<i class="material-icons right">close</i></p>
@@ -107,14 +108,14 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://mylocalweather.surge.sh/" target="_blank"><img src="/assets/images/my-local-weather.JPG"></a>
+                <a href="https://mylocalweather.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/my-local-weather.JPG"></a>
               </div>
               <div class="card-content">
                 <span class="card-title">My Local Weather<i class="material-icons activator right hello">more_vert</i></span>
                 <p>Web app that grabs your current location and returns the current and weekly weather.</p>
               </div>
               <div class="card-action">
-                <a href="https://mylocalweather.surge.sh/" target="_blank">Check it out!</a>
+                <a href="https://mylocalweather.surge.sh/" target="_blank" rel="noopener noreferrer">Check it out!</a>
               </div>
               <div class="card-reveal">
                 <p class="card-title">Built With:<i class="material-icons right">close</i></p>
@@ -131,20 +132,20 @@
           <div class="col s12 m6 l4">
               <div class="card">
                 <div class="card-image">
-                  <a href="https://christianlopez.surge.sh/" target="_blank"><img src="/assets/images/portfolio.JPG"></a>
+                  <a href="https://christianlopez.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/portfolio.JPG"></a>
                 </div>
                 <div class="card-content">
                   <span class="card-title">Portfolio<i class="material-icons activator right hello">more_vert</i></span>
                   <p>Portfolio website to showcase my projects and skillset</p>
                 </div>
                 <div class="card-action">
-                  <a href="https://christianlopez.surge.sh/" target="_blank">Check it out!</a>
+                  <a href="https://christianlopez.surge.sh/" target="_blank" rel="noopener noreferrer">Check it out!</a>
                 </div>
                 <div class="card-reveal">
                   <p class="card-title">Built With:<i class="material-icons right">close</i></p>
                   <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
                     <li>Materialize</li>
                     <li>jQuery</li>
                   </ul>
@@ -233,19 +234,19 @@
         <div class="card-content">
           <div class="row">
             <div class="col s6 m3 techName">
-              <a class="btn-floating btn-large waves-effect waves-light red" href="https://www.linkedin.com/in/lopezchris616/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+              <a class="btn-floating btn-large waves-effect waves-light red" href="https://www.linkedin.com/in/lopezchris616/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
               <p>LinkedIn</p>
             </div>
             <div class="col s6 m3 techName">
-              <a class="btn-floating btn-large waves-effect waves-light red" href="mailto:christian.lopez023@mymdc.net" target="_blank"><i class="material-icons">email</i></a>
+              <a class="btn-floating btn-large waves-effect waves-light red" href="mailto:christian.lopez023@mymdc.net" target="_blank" rel="noopener noreferrer"><i class="material-icons">email</i></a>
               <p>Email</p>
             </div>
             <div class="col s6 m3 techName">
-                <a class="btn-floating btn-large waves-effect waves-light red" href="https://github.com/LopezChris616" target="_blank"><i class="fab fa-github"></i></a>
+                <a class="btn-floating btn-large waves-effect waves-light red" href="https://github.com/LopezChris616" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
                 <p>GitHub</p>
             </div>
             <div class="col s6 m3 techName">
-                <a class="btn-floating btn-large waves-effect waves-light red" href="https://docs.google.com/document/d/1et6irbEsMr3KeQk02iYL_tXDoA_Bo9muQl0iABQLtMY/edit?usp=sharing" target="_blank"><i class="material-icons small white-text">assignment_ind</i></a>
+                <a class="btn-floating btn-large waves-effect waves-light red" href="https://docs.google.com/document/d/1et6irbEsMr3KeQk02iYL_tXDoA_Bo9muQl0iABQLtMY/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><i class="material-icons small white-text">assignment_ind</i></a>
                 <p>Resume</p>
             </div>
           </div> 
