changed link to resume

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="#projects" class="waves-effect"><i class="material-icons small white-text">web</i>Projects</a></li>
     <li><a href="#skillsScroll" class="waves-effect"><i class="material-icons small white-text">stars</i>Skills</a></li>
     <li><a class="waves-effect" href="#contact"><i class="material-icons small white-text">contact_mail</i>Contact</a></li>
-    <li><a href="https://docs.google.com/document/d/1et6irbEsMr3KeQk02iYL_tXDoA_Bo9muQl0iABQLtMY/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="waves-effect"><i class="material-icons small white-text">assignment_ind</i>Resume</a></li>
+    <li><a href="https://docs.google.com/document/d/1Olm06bOwZza6AQ_FAMBTmEn4xjk9ESdapl92KrH6NOw/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="waves-effect"><i class="material-icons small white-text">assignment_ind</i>Resume</a></li>
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons small nav">menu</i></a>
   <div id="container">
@@ -165,11 +165,11 @@
               <div class="row">
                 <div class="col s6 m4 l2 techName">
                     <img src="/assets/images/html.png" class="skillLogos" alt="HTML5 logo" />
-                    <p>HTML</p>
+                    <p>HTML5</p>
                 </div>
                 <div class="col s6 m4 l2 techName">
                     <img src="/assets/images/css3.png" class="skillLogos" alt="CSS3 logo" />
-                    <p>CSS</p>
+                    <p>CSS3</p>
                 </div>
                 <div class="col s6 m4 l2 techName">
                     <img src="/assets/images/Sass.svg.png" class="skillLogos" alt="Sass logo" />
