--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Christian Lopez - Web Developer</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -10,6 +10,23 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/tab-icon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Christian Lopez is a Web Developer who specializes in the Front-End of websites/apps using HTML5, CSS3 (Sass), JavaScript, React, and Redux, but can also work in the Back-End.">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@LopezChris616">
+    <meta name="twitter:title" content="Christian Lopez - Web Developer">
+    <meta name="twitter:description" content="Christian Lopez is a Web Developer who specializes in the Front-End of websites/apps using HTML5, CSS3 (Sass), JavaScript, React, and Redux, but can also work in the Back-End.">
+    <meta name="twitter:creator" content="@LopezChris616">
+    <meta name="twitter:image" content="/assets/images/portfolio.JPG">
+    <meta name="twitter:image:alt" content="screenshot of Christian Lopez's Web Developer portfolio website">
+
+    <meta property="og:title" content="Christian Lopez - Web Developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://christianlopez.surge.sh/" />
+    <meta property="og:image" content="/assets/images/portfolio.JPG" />
+    <meta property="og:description" content="Christian Lopez is a Web Developer who specializes in the Front-End of websites/apps using HTML5, CSS3 (Sass), JavaScript, React, and Redux, but can also work in the Back-End." /> 
+    <meta property="og:site_name" content="Christian Lopez, Web Developer" />
 </head>
 <body>
   <ul id="slide-out" class="sidenav sidenav-fixed">
@@ -32,7 +49,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://soarify.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/soarify.JPG"></a>
+                <a href="https://soarify.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/soarify.JPG" alt="screenshot of the google maps page of the soarify web application"/></a>
               </div>
               <div class="card-content">
                 <span class="card-title">Soarify<i class="material-icons activator right hello">more_vert</i></span>
@@ -60,7 +77,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/film-select.JPG"></a>
+                <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/film-select.JPG" alt="screenshot of the home page of the film select web application/></a>
               </div>
               <div class="card-content">
                 <span class="card-title">Film Select<i class="material-icons activator right hello">more_vert</i></span>
@@ -84,7 +101,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://rgbcolorguesser.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/rgb-color-guess.JPG"></a>
+                <a href="https://rgbcolorguesser.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/rgb-color-guess.JPG" alt="screenshot of the rgb color guessing online game"/></a>
               </div>
               <div class="card-content">
                 <span class="card-title">RGB Color Guesser<i class="material-icons activator right hello">more_vert</i></span>
@@ -108,7 +125,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://mylocalweather.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/my-local-weather.JPG"></a>
+                <a href="https://mylocalweather.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/my-local-weather.JPG" alt="screenshot of the local weather web application"/></a>
               </div>
               <div class="card-content">
                 <span class="card-title">My Local Weather<i class="material-icons activator right hello">more_vert</i></span>
@@ -132,7 +149,7 @@
           <div class="col s12 m6 l4">
               <div class="card">
                 <div class="card-image">
-                  <a href="https://christianlopez.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/portfolio.JPG"></a>
+                  <a href="https://christianlopez.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/portfolio.JPG" alt="screenshot of Christian Lopez's portfolio website"/></a>
                 </div>
                 <div class="card-content">
                   <span class="card-title">Portfolio<i class="material-icons activator right hello">more_vert</i></span>
