--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/film-select.JPG" alt="screenshot of the home page of the film select web application/></a>
+                <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/film-select.JPG" alt="screenshot of the home page of the film select web application"/></a>
               </div>
               <div class="card-content">
                 <span class="card-title">Film Select<i class="material-icons activator right hello">more_vert</i></span>
