added new project

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title">Film Select<i class="material-icons activator right hello">more_vert</i></span>
-                <p>Web app to view information on films based on genre, now playing, and most popular.</p>
+                <p>Web app to view information on films based on genre, now playing, and most popular</p>
               </div>
               <div class="card-action">
                 <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer">Check it out!</a>
@@ -129,7 +129,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title">My Local Weather<i class="material-icons activator right hello">more_vert</i></span>
-                <p>Web app that grabs your current location and returns the current and weekly weather.</p>
+                <p>Web app that grabs your current location and returns the current and weekly weather</p>
               </div>
               <div class="card-action">
                 <a href="https://mylocalweather.surge.sh/" target="_blank" rel="noopener noreferrer">Check it out!</a>
@@ -141,6 +141,29 @@
                   <li>Redux</li>
                   <li>Sass</li>
                   <li>Dark Sky API</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image">
+                <a href="https://calculator1.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/calculator.JPG" alt="screenshot of the local weather web application"/></a>
+              </div>
+              <div class="card-content">
+                <span class="card-title">Calculator<i class="material-icons activator right hello">more_vert</i></span>
+                <p>Simple calculator that performs addition, subtraction, multiplication, and division operations</p>
+              </div>
+              <div class="card-action">
+                <a href="https://calculator1.surge.sh/"" target="_blank" rel="noopener noreferrer">Check it out!</a>
+              </div>
+              <div class="card-reveal">
+                <p class="card-title">Built With:<i class="material-icons right">close</i></p>
+                <ul>
+                  <li>HTML5</li>
+                  <li>Sass</li>
+                  <li>JavaScript/ES6</li>
                 </ul>
               </div>
             </div>
@@ -196,17 +219,13 @@
                     <img src="/assets/images/JavaScript.png" class="skillLogos" alt="JavaScript logo" />
                     <p>JavaScript/ES6</p>
                 </div>
-                <div class="col s6 m4 l1 techName">
+                <div class="col s6 m4 l2 techName">
                     <img src="/assets/images/react-logo.svg" class="skillLogos" alt="ReactJS logo" />
                     <p>ReactJS</p>
                 </div>
-                <div class="col s6 m4 l1 techName">
+                <div class="col s6 m4 l2 techName">
                     <img src="/assets/images/redux.svg" class="skillLogos" alt="Redux logo" />
                     <p>Redux</p>
-                </div>
-                <div class="col s6 m4 l1 techName">
-                    <img src="/assets/images/jQuery.png" class="skillLogos" alt="jQuery logo" />
-                    <p>jQuery</p>
                 </div>
               </div>
             </div>
