--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Christian Lopez - Web Developer</title>
+    <title>Christian Lopez</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
@@ -40,16 +40,15 @@
   <div id="container">
       <div id="intro" class="section scrollspy">
         <h1>Christian Lopez</h1>
-        <h1>Web Developer</h1>
-        <h1>Let's build something awesome!</h1>
+        <h1>Web Development Projects</h1>
       </div>
       <div id="projects" class="section scrollspy">
         <h2>Projects</h2>
         <div class="row">
           <div class="col s12 m6 l4">
-            <div class="card">
+            <div class="card hoverable">
               <div class="card-image">
-                <a href="https://soarify.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/soarify.JPG" alt="screenshot of the google maps page of the soarify web application"/></a>
+                <a href="https://soarify.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/Soarify.png" alt="screenshot of the google maps page of the soarify web application"/></a>
               </div>
               <div class="card-content">
                 <span class="card-title">Soarify<i class="material-icons activator right hello">more_vert</i></span>
@@ -75,7 +74,7 @@
           </div>
 
           <div class="col s12 m6 l4">
-            <div class="card">
+            <div class="card hoverable">
               <div class="card-image">
                 <a href="https://filmselect.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/film-select.JPG" alt="screenshot of the home page of the film select web application"/></a>
               </div>
@@ -99,7 +98,7 @@
           </div>
 
           <div class="col s12 m6 l4">
-            <div class="card">
+            <div class="card hoverable">
               <div class="card-image">
                 <a href="https://rgbcolorguesser.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/rgb-color-guess.JPG" alt="screenshot of the rgb color guessing online game"/></a>
               </div>
@@ -123,9 +122,9 @@
 
         <div class="row">
           <div class="col s12 m6 l4">
-            <div class="card">
+            <div class="card hoverable">
               <div class="card-image">
-                <a href="https://mylocalweather.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/my-local-weather.JPG" alt="screenshot of the local weather web application"/></a>
+                <a href="https://mylocalweather.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/localweather.png" alt="screenshot of the local weather web application"/></a>
               </div>
               <div class="card-content">
                 <span class="card-title">My Local Weather<i class="material-icons activator right hello">more_vert</i></span>
@@ -147,7 +146,7 @@
           </div>
 
           <div class="col s12 m6 l4">
-            <div class="card">
+            <div class="card hoverable">
               <div class="card-image">
                 <a href="https://calculator1.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/calculator.JPG" alt="screenshot of the local weather web application"/></a>
               </div>
@@ -170,7 +169,7 @@
           </div>
 
           <div class="col s12 m6 l4">
-              <div class="card">
+              <div class="card hoverable">
                 <div class="card-image">
                   <a href="https://christianlopez.surge.sh/" target="_blank" rel="noopener noreferrer"><img src="/assets/images/portfolio.JPG" alt="screenshot of Christian Lopez's portfolio website"/></a>
                 </div>
@@ -294,5 +293,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="/js/materialize.min.js"></script>
   <script src="/js/app.js"></script>
+  <script src="https://kit.fontawesome.com/2667bc08ed.js" crossorigin="anonymous"></script>
 </body>
 </html>
