started new section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <body>
   <ul id="slide-out" class="sidenav sidenav-fixed">
     <li><a href="#intro" class="waves-effect"><i class="material-icons small white-text">arrow_upward</i>Top of Page</a></li>
+    <li><a href="education.html" class="waves-effect">Education</a></li>
     <li><a href="#projects" class="waves-effect"><i class="material-icons small white-text">web</i>Projects</a></li>
     <li><a href="#skillsScroll" class="waves-effect"><i class="material-icons small white-text">stars</i>Skills</a></li>
     <li><a class="waves-effect" href="#contact"><i class="material-icons small white-text">contact_mail</i>Contact</a></li>
@@ -38,7 +39,7 @@
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons small nav">menu</i></a>
   <div id="container">
-      <div id="intro" class="section scrollspy">
+      <div id="heading-intro" class="section scrollspy projects">
         <h1>Christian Lopez</h1>
         <h1>Web Development Projects</h1>
       </div>
